# bazel-rust-protobuf-example

./: README.md  WORKSPACE
protos/: BUILD.bazel  messages.proto
src/: BUILD.bazel  lib.rs  test1.rs  test2.rs
